changement largeur vidéo responsive

--- a/style/style.css
+++ b/style/style.css
@@ -983,7 +983,7 @@ background-color: var(--clr-accent);
         }
 
         .video{
-            height: 100vh;
+            /* height: 100vh; */
             width: 100%;
         }
     
