--- a/style/style_index.css
+++ b/style/style_index.css
@@ -24,7 +24,7 @@
     --clr-texte2: #dddddd;
     --clr-texte3: #000000;
 
-    --clr-accent: blue ;  
+    --clr-accent: #7234e4;  
     --clr-accent2: #19003f;
 }
 
