--- a/style/style_index.css
+++ b/style/style_index.css
@@ -830,7 +830,7 @@ position: relative;
 }
 
 
-.hidden{
+.hidden1{
     display: none;
 }
 /*---------- réservation: jour, heure, créneau ----------*/
