--- a/style/style_index.css
+++ b/style/style_index.css
@@ -1174,6 +1174,35 @@ background-color: var(--clr-accent);
         #galerie .overlay{
             font-size: 1.2rem;
         }
+        #galerie{
+            display: flex;
+            justify-content: none;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            background-color: var(--clr-dark);
+            width: 100%;
+            height: 100vh;
+            padding: 5px;
+            gap: 0px;
+        }
+
+        #galerie .gauche{
+            position: relative;
+            display: flex;
+            align-items: center;
+            height: 350px;
+            width: 80%;
+            margin: 80px 0px 0px 0px;
+        }
+    
+        #galerie .droite{
+            position: relative;
+            display: flex;
+            align-items: center;
+            height: 350px;
+            width: 80%;
+            margin: 50px 0px 0px 0px;
+        }
 
 
         #evenements{
@@ -1267,35 +1296,17 @@ background-color: var(--clr-accent);
     }
 
     /* --------------------------------------------GALERIE------------------------------------ */
-    #galerie{
-        display: flex;
-        justify-content: none;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        background-color: var(--clr-dark);
-        width: 100%;
-        height: 100vh;
-        padding: 5px;
-        gap: 0px;
-    }
-
 
     #galerie .gauche{
-        position: relative;
-        display: flex;
-        align-items: center;
         width: 100%;
         height: 280px;
-        margin-top: 120px;
+        margin: 120px 0 0 0
     }
 
     #galerie .droite{
-        position: relative;
-        display: flex;
-        align-items: center;
         width: 100%;
         height: 280px;
-        margin-top: 50px;
+        margin: 50px 0 0 0
     }
 
     #galerie img{
