--- a/style/style_panier.css
+++ b/style/style_panier.css
@@ -5,18 +5,14 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    scroll-snap-align: none;
+    height: fit-content;
+    padding: 50px;
 }
-
-p {
-padding-top: 100px;
-margin-left: 20px;
-}
-
-
 
 table {
     margin-top: 100px;
-    width: 80%;
+    width: 95%;
     border-collapse: collapse;
     
     
@@ -27,6 +23,13 @@ table th {
     background-color: var(--clr-nav);
     color: white;
 }
+
+table th:nth-child(1){
+    border-radius: 10px 0 0 0;
+}
+table th:nth-child(10){
+    border-radius: 0 10px 0 0;
+}
 table td {
     text-align:left;
     padding:20px 10px;
@@ -36,7 +39,10 @@ table td {
     border-bottom: solid black 10px;
 }
 
-table td:nth-child(9){
+table th:nth-child(8){
+    text-align: center;
+}
+table td:nth-child(10){
     text-align: center;
 }
 .fa-minus, .fa-plus{
@@ -47,7 +53,14 @@ table td:nth-child(9){
 .fa-xmark{
     font-size: 1.5rem;
     color: rgb(201, 21, 21);
-    padding: 0 20px;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    transition: .4s;
+}
+
+.fa-xmark:hover{
+    background-color: rgba(201, 21, 21, 0.233);
 }
 
 .bouton1{
@@ -61,9 +74,16 @@ table td:nth-child(9){
     border-radius: 20px;
     transition: .4s;
 }
+
+table td:nth-child(9){
+    justify-content: center;
+    width: 320px;
+}
 .bouton2{
     position: relative;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     padding: 5px;
     width: 150px;
@@ -71,19 +91,25 @@ table td:nth-child(9){
     background-color: rgb(46, 190, 130);
     color: white;
     border-radius: 20px;
-    transition: .4s;
     border: none;
     overflow: hidden;
+    transform: translateX(80px);
+    transition: .4s;
+}
+
+.bouton2:hover{
+    background-color: rgb(25, 134, 89);
 }
 
 .bouton2 p{
+    height: fit-content;
+    width: 100%;
     color:black;
-    text-align: left;
-    /* display: none; */
+    text-align: center;
     position: absolute;
     font-size: 1rem;
-    padding: 30px;
-    top: 0px;       
+    top: -70px; 
+    padding-top: 100px;  
 }
 
 .bouton2:hover{
@@ -95,9 +121,11 @@ table td:nth-child(9){
     background-color: #f1f1f1;
     width: 300px;
     height: 100px;
+    transform: translateX(0px);
 }
-.bouton2activeP{
-display: block;
+
+.bouton2active:hover{
+    background-color: #d4d4d4;
 }
 
 .bouton1:hover{
