--- a/style/style_panier.css
+++ b/style/style_panier.css
@@ -27,7 +27,10 @@ table th {
 table th:nth-child(1){
     border-radius: 10px 0 0 0;
 }
-table th:nth-child(10){
+table th:nth-child(9){
+    text-align: center;
+}
+table th:nth-child(11){
     border-radius: 0 10px 0 0;
 }
 table td {
@@ -42,7 +45,7 @@ table td {
 table th:nth-child(8){
     text-align: center;
 }
-table td:nth-child(10){
+table td:nth-child(11){
     text-align: center;
 }
 .fa-minus, .fa-plus{
