--- a/style/style_index.css
+++ b/style/style_index.css
@@ -34,7 +34,7 @@ body.dark{
 
     --clr-light: #4d0019;
     --clr-dark:  #330011;
-    --clr-nav: #181f18;
+    --clr-nav: #18181f;
     --clr-card : #1d1e22;
     --clr-txtzone : #25262a;
 
@@ -132,27 +132,25 @@ section{
     border-radius: 10px;
     transition: .2s;
     z-index: 1;
-    overflow: hidden;
 }
 
 #top li:hover{
     background-color: rgba(255, 255, 255, 0.356);
-    }
-    
-    #top .indicateur{
-        position: absolute;
-        width: 150px;
-        height: 20px;
-        background-color: var(--clr-accent);
-        border-radius: 10px;
-        transition: .5s ;
-    }
+}
+
+#top .indicateur{
+    position: absolute;
+    width: 150px;
+    height: 20px;
+    background-color: var(--clr-accent);
+    border-radius: 10px;
+    transition: .5s ;
+}
 
 /* permet d'animer l'indicateur dans la barre de navigation */
 #top li:nth-child(1).active ~ .indicateur{ 
     transform: translateX(calc(250px * 0));
 }
-
 #top li:nth-child(2).active ~ .indicateur{
     transform: translateX(calc(250px * 1)); 
 }
@@ -166,16 +164,53 @@ section{
     transform: translateX(calc(250px * 4));
     
 }
-
 #top li:nth-child(6) {
     display: flex;
     justify-content: space-between;
     padding-left: 5px;
 
 }
-/* ----------------------------------- BOUTON DARKMODE -------------------------- */
+
+.anim-logo{
+    /* transform: translateX(400px); */
+    transform: translateY(-45px);
+}
+
+.reservations{
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    right: 100px;
+    z-index: 999;
+    width: 50px;
+    height: 50px;
+    /* background-color: red; */
+    font-size: 1.5rem;
+}
+
+.fa-bell-concierge{
+    color: white;
+    transition: .4s;
+}
+
+.reservations:hover .nbReservation,.reservations:hover .fa-bell-concierge{
+    color: var(--clr-accent);
+}
+
+.nbReservation{
+    color: white;
+    margin-left: 5px;
+    transition: .4s;
+}
+
+/* -----------------------------------BOUTON DARKMODE-------------------------- */
 
 .btn-toggle{
+    position: fixed;
+    top:0px;
+    right: 0px;
     width: 50px;
     height: 50px;
     z-index: 5;
@@ -188,25 +223,7 @@ section{
     cursor: pointer;
     transition: .4s;
 }
-.anim-logo{
-    /* transform: translateX(400px); */
-    transform: translateY(-45px);
-}
 
-.reservations{
-    position: relative;
-}
-
-.nbReservation{
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: block;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: var(--clr-accent);
-}
 /* ------------------------------------------ACCUEIL------------------------------- */
 
 #accueil{
@@ -1163,8 +1180,8 @@ background-color: var(--clr-accent);
             height: 300px;
             width: 100%;
             left: 0;
-            top: -205px;
-            background-color:#18181f80;
+            top: -230px;
+            background-color:#1f181880;
             backdrop-filter: blur(10px);
             padding-top: 20px;
             transition: .4s;
@@ -1184,7 +1201,7 @@ background-color: var(--clr-accent);
 
         .burgerActiveNav{
             /* height: 350px; */
-            transform: translateY(270px);
+            transform: translateY(300px);
         }
 
         #top .logo img{
@@ -1284,6 +1301,7 @@ background-color: var(--clr-accent);
         }
 
         .btn-toggle{
+            display: none;
             position: fixed;
             top:0px;
             right: 0px;
@@ -1292,7 +1310,7 @@ background-color: var(--clr-accent);
             z-index: 5;
             background:var(--clr-texte3);
             color:var(--clr-texte2);
-            display: flex;
+            /* display: flex; */
             justify-content: center;
             align-items: center;
             text-align: center;
@@ -1315,6 +1333,10 @@ background-color: var(--clr-accent);
     footer .horaires{
         width: 50%;
     }
+
+    .reservations{
+        display: none;
+    }
 }
 @media screen and (max-width: 414px ){
 
@@ -1336,6 +1358,10 @@ background-color: var(--clr-accent);
         position: fixed;
         z-index: -999;
          
+    }
+
+    .btn-toggle{
+        display: none;
     }
 
     /* --------------------------------------------GALERIE------------------------------------ */
