ajout style form admin

--- a/style/style_admin.css
+++ b/style/style_admin.css
@@ -4,6 +4,12 @@
     transform: translateY(100px);
 }
 
+#main{
+
+
+    
+}
+
 .row{
     display: flex;
     margin-left: 20px;
@@ -11,6 +17,43 @@
     align-items: center;
     height: 50px;
     width: 500px;
-    background-color: red;
-    border-bottom: solid black 1px;
+    background-color: white;
+    margin-top: 10px;
+    box-shadow:
+        3.5px 4.5px 3.6px rgba(0, 0, 0, 0.024),
+        9.6px 12.5px 10px rgba(0, 0, 0, 0.035),
+        23.2px 30.1px 24.1px rgba(0, 0, 0, 0.046),
+        77px 100px 80px rgba(0, 0, 0, 0.07);
+    }
+
+.row:nth-child(1){
+    justify-content: center;
+    background-color: var(--clr-nav);
+    color: white;
+    border-radius: 10px 10px 0 0;
+}
+.row:nth-child(3){
+    height: 100px;
+}
+.row:nth-child(5){
+    justify-content: center;
+    border-radius: 0 0 10px 10px;
+}
+
+.input-file {
+    display: none;
+}
+
+.menu{
+    margin-top: 150px;
+    margin-left: 20px;
+}
+
+.imageMenu{
+    width: 200px;
+}
+
+
+.bouton3{
+    width: 400px;
 }
